--- a/deploy/azure-pipelines.yml
+++ b/deploy/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-  isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
+  isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
 
 stages:
 - stage: A
