--- a/deploy/azure-pipelines.yml
+++ b/deploy/azure-pipelines.yml
@@ -14,4 +14,4 @@ stages:
   - job: B1
     steps:
       - script: echo Hello Stage B!
-      - script: echo $(isMain
+      - script: echo $(isMain)
