--- a/deploy/azure-pipelines.yml
+++ b/deploy/azure-pipelines.yml
@@ -1,5 +1,6 @@
 variables:
   isMain: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
+  isdev: $[eq(variables['Build.SourceBranch'], 'refs/heads/dev')]
 
 stages:
 - stage: A
@@ -7,18 +8,16 @@ stages:
   - job: A1
     steps:
       - script: echo Hello Stage A!
-      - task: ArchiveFiles@2
-        inputs:
-          rootFolderOrFile: '$(Build.BinariesDirectory)'
-          includeRootFolder: true
-          archiveType: 'zip'
-          archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-          replaceExistingArchive: true
 
 - stage: B
-  condition: and(succeeded(), eq(variables.isMain, true))
   jobs:
-  - job: B1
+  - job: JOB1
+    condition: and(succeeded(), eq(variables.isMain, true))
     steps:
-      - script: echo Hello Stage B!
+      - script: echo Hello JOB 1!
       - script: echo $(isMain)
+  - job: JOB2
+    condition: and(succeeded(), eq(variables.isdev, true))
+    steps:
+      - script: echo Hello JOB 2!
+      - script: echo $(isdev)
